@@ -2,6 +2,7 @@
 Description=Exhibitor: Zookeeper Supervisor Service
 After=network-online.target
 [Service]
+User=dcos_exhibitor
 StandardOutput=journal
 StandardError=journal
 Restart=always
@@ -13,4 +14,4 @@ EnvironmentFile=/opt/mesosphere/environment
 EnvironmentFile=/opt/mesosphere/etc/dns_config
 EnvironmentFile=/opt/mesosphere/etc/exhibitor
 # run in new mount namespace to create custom resolv.conf
-ExecStart=/usr/bin/unshare --mount $PKG_PATH/usr/exhibitor/start_exhibitor.py
+ExecStart=$PKG_PATH/usr/exhibitor/start_exhibitor.py
